tests/NormalTests/paczka1/fuzzy1/54201275.err
Error in line 6: BPiIoRXRZ A66 76,7
Error in line 9: KH21BdcKVGl S768 29,0
Error in line 7: BPiIoRXRZ A675 74,8
Error in line 11: BPiIoRXRZ S36 24,4
Error in line 28: sY9 A66 95,6
Error in line 33: sY9 S36 33,1
